# YellowSense_Biometric_Sdk

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/kotlin/com/example/biometric_sdk/: BiometricSdkPlugin.kt  NativeProcessor.kt
android/src/test/kotlin/com/example/biometric_sdk/: BiometricSdkPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/biometric_sdk_example/: MainActivity.kt
example/android/app/src/main/res/values/: strings.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: AppDelegate.swift  CameraManager.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: biometric_sdk.podspec
ios/Classes/: BiometricSdkPlugin.swift
lib/: biometric_sdk.dart  biometric_sdk_method_channel.dart  biometric_sdk_platform_interface.dart
test/: biometric_sdk_method_channel_test.dart  biometric_sdk_test.dart
